    Bundled from https://github.com/bundler/bundler/commit/a53709556b95a914e874b22ed2116a46b0528852

CSV::

  * Upgrade to 3.0.9.
    See https://github.com/ruby/csv/blob/master/NEWS.md.

Date::

  * Date.jisx0301, Date#jisx0301, and Date.parse provisionally support the
    new Japanese era as an informal extension, until the new JIS X 0301 is
    issued.  [Feature #15742]

ERB::

  * Prohibit marshaling ERB instance.

IRB::

  * Introduce syntax highlight inspired by pry.gem to binding.irb source lines,
    REPL input, and inspect output of some core-class objects.

Net::IMAP::

  * Add Server Name Indication (SNI) support.  [Feature #15594]

RSS::

  * Upgrade to RSS 0.2.8.
    See https://github.com/ruby/rss/blob/master/NEWS.md.

RubyGems::

  * Upgrade to RubyGems 3.1.0.pre1
    Bundled from https://github.com/rubygems/rubygems/commit/97b264f0fa248c864b6ee9a23d3ff1cdd217dddb

=== Compatibility issues (excluding feature bug fixes)

=== Stdlib compatibility issues (excluding feature bug fixes)

profile.rb, Profiler__::

  * Removed from standard library. No one maintains it from Ruby 2.0.0.

=== C API updates

=== Implementation improvements

JIT::

  * JIT-ed code is recompiled to less-optimized code when an optimization assumption is invalidated.

  * Method inlining is performed when a method is considered as pure.
    This optimization is still experimental and many methods are NOT considered as pure yet.

  * Default value of +--jit-max-cache+ is changed from 1,000 to 100

  * Default value of +--jit-min-calls+ is changed from 5 to 10,000

GC::

  * New `GC.compact` method for compacting the heap.
    This function compacts live objects in the heap so that fewer pages may
    be used, and the heap may be more CoW friendly. [Feature #15626]

    Details on the algorithm and caveats can be found here:
    https://bugs.ruby-lang.org/issues/15626

=== Miscellaneous changes

* Require compilers to support C99 [Misc #15347]
